fix: myatis resource common에 sqlSession 추가

--- a/13_MemberJSTL/WebContent/views/register.html
+++ b/13_MemberJSTL/WebContent/views/register.html
@@ -14,7 +14,7 @@
         <label>이름 :</label>
         <input type="text" name="name"><br>
         <label>주소: </label>
-        <input type="text" name="addr"><br>
+        <input type="text" name="address"><br>
         <input type="submit" value="회원가입">
     </form>
 </body>
