--- a/22_MyBatis/WebContent/views/search.html
+++ b/22_MyBatis/WebContent/views/search.html
@@ -7,9 +7,21 @@
 <body>
     <h2>회원 아이디 검색</h2>
     <form action="/find.do" method="post">
-        <label>ID 검색 : </label>
-        <input type="text" name="id">
-        <input type="submit" value="검색">
+        <!--
+        아이디 : <input type="text" name="id"><br>
+        주소 : <input type="text" name="address"><br>
+          -->
+        <label>
+          <input type="checkbox" name="checkId" value="user1234"> user1234
+        </label>
+        <label>
+          <input type="checkbox" name="checkId" value="user01"> user01
+        </label>
+        <label>
+          <input type="checkbox" name="checkId" value="user02"> user02
+        </label>
+        
+        <input type="submit" value="조회">
     </form>
 </body>
 </html>
